fix(instructions): fix image on android and video on ios

--- a/packages/ui-shared/src/components/Instructions/Instructions.less
+++ b/packages/ui-shared/src/components/Instructions/Instructions.less
@@ -77,6 +77,7 @@
     &__swiper-img {
         width: 100%;
         height: 100%;
+        filter: brightness(108.5%);
     }
 
     &__img-wrapper {
